package com.app.photographers.exception;

public class ErrorMessages {
    public static final String ERROR_EVENT_TYPE_EXISTS = "Event already exists";
    public static final String ERROR_EVENT_TYPE_NOT_FOUND = "Event Type not found";
    public static final String ERROR_PHOTOGRAPHER_NOT_FOUND = "Photographer not found";
    public static final String ERROR_USER_EXISTS = "User already exists";

}
