package com.app.photographers.exception;

public record ErrorResponse(int statusCode, String message) {

}
