package com.app.photographers.exception;

public class ResourceAlreadyExistsException extends RuntimeException {

    public ResourceAlreadyExistsException (String message) { super(message); }
}
