package com.app.photographers.model;

import jakarta.persistence.Column;
import jakarta.persistence.EntityListeners;
import jakarta.persistence.MappedSuperclass;
import lombok.Data;
import org.springframework.data.annotation.CreatedDate;
import org.springframework.data.annotation.LastModifiedDate;
import org.springframework.data.jpa.domain.support.AuditingEntityListener;

import java.time.Instant;

@MappedSuperclass
@EntityListeners(AuditingEntityListener.class)
@Data
public abstract class AuditModel {

    @Column(nullable = false, updatable = false)
    @CreatedDate
    private Instant createdDate;

    @Column(nullable = false)
    @LastModifiedDate
    private Instant modifiedDate;
}
